--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,3 +1,10 @@
+@online{theoryWCRDF,
+  author = {{dr inż. Joanna Raczek, dr Joanna Cyman}},
+  title  = {Weakly connected Roman domination in graphs},
+  url    = {https://mostwiedzy.pl/en/publication/weakly-connected-roman-domination-in-graphs,150016-1},
+  note   = {Dostęp: 03.03.2025}
+}
+
 @inproceedings{kowalski2002,
   author    = {Kowalski, J. and Kabacki, J.},
   title     = {Simulation of Network Systems in Education},
@@ -7,13 +14,6 @@
   pages     = {213--218},
   publisher = {ASIS},
   note      = {9--11 września 2002}
-}
-
-@online{ncbi2022,
-  author = {{National Center of Biotechnology Information}},
-  title  = {NCBI Home Page},
-  url    = {https://www.ncbi.nlm.nih.gov},
-  note   = {Dostęp: 20.12.2022}
 }
 
 @online{openai2024,
