--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -19,8 +19,9 @@
 
 % Include main chapters of the thesis
 \include{chapters/00_introduction}
-\include{chapters/01_example}
-\include{chapters/02_conclusion}
+\include{chapters/01_theory}
+\include{chapters/02_algorithms}
+\include{chapters/92_conclusion}
 
 \printbibliography
 
