--- a/thesis/preamble.tex
+++ b/thesis/preamble.tex
@@ -78,3 +78,9 @@
 \DefineBibliographyStrings{polish}{
     bibliography = {Wykaz literatury}
 }
+
+\usepackage{algpseudocode}
+\usepackage{algorithm}
+\usepackage{xcolor}
+\usepackage{float}
+\usepackage{placeins}
