--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -5,21 +5,28 @@
   note   = {Dostęp: 03.03.2025}
 }
 
-@inproceedings{kowalski2002,
-  author    = {Kowalski, J. and Kabacki, J.},
-  title     = {Simulation of Network Systems in Education},
-  booktitle = {Proceedings of the XXIV Autumn International Colloquium Advanced Simulation of Systems},
-  year      = {2002},
-  address   = {Ostrava, Czechy},
-  pages     = {213--218},
-  publisher = {ASIS},
-  note      = {9--11 września 2002}
+@inproceedings{defendRomanEmpire,
+  author    = {I. Stewart,},
+  title     = {Defend the Roman Empire!,},
+  year      = {1999},
+  address   = {USA},
+  pages     = {136--139},
+  publisher = {Scientific},
+  note      = {Dostęp: 03.03.2025}
 }
 
-@online{openai2024,
-  author = {{OpenAI}},
-  title  = {Treść wygenerowana przy użyciu narzędzi ChatGPT (wersja 2024)},
-  year   = {2024},
-  url    = {https://openai.com},
-  note   = {Dostęp: 15.01.2025}
+@online{improvedILP,
+  author = {{Marija Ivanović}},
+  title  = {Improved integer linear programming formulation for weak Roman domination problem},
+  year   = {2017},
+  url    = {https://link.springer.com/article/10.1007/s00500-017-2706-4},
+  note      = {Dostęp: 15.03.2025}
+}
+
+@online{ILP,
+  author = {{Padamutham Chakradhar, Palagiri Venkata Subba Reddy, i Khandelwal Himanshu}},
+  title  = {Algorithmic complexity of weakly connected Roman domination in graphs},
+  year   = {2021},
+  url    = {https://www.worldscientific.com/doi/epdf/10.1142/S1793830921501251},
+  note      = {Dostęp: 15.03.2025}
 }
