--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -21,12 +21,20 @@
 \include{chapters/00_introduction}
 \include{chapters/01_theory}
 \include{chapters/02_algorithms}
+\include{chapters/03_results}
+\include{chapters/04_practice}
 \include{chapters/92_conclusion}
 
 \printbibliography
 
 % Appendices (additional materials, calculations, etc.)
-\appendix
-\include{chapters/99_appendix}
+% \appendix
+% \include{chapters/99_appendix}
+
+\listoffigures
+\addcontentsline{toc}{chapter}{\listfigurename}
+
+\listoftables
+\addcontentsline{toc}{chapter}{\listtablename}
 
 \end{document}
