--- a/thesis/preamble.tex
+++ b/thesis/preamble.tex
@@ -22,6 +22,8 @@
 % Line spacing
 \usepackage{setspace}
 \setstretch{1.5}
+\usepackage{graphicx}
+\usepackage{subcaption}
 
 % Custom headers and footers
 \usepackage{fancyhdr}
@@ -61,7 +63,7 @@
 % Customize section and chapter titles
 \usepackage{titlesec}
 
-\titleformat{\chapter}[hang]{\bfseries\Large\MakeUppercase}{\thechapter.}{1em}{}{}
+\titleformat{\chapter}[hang]{\bfseries\Large\MakeUppercase}{Rozdział \thechapter.}{1em}{}{}
 \titlespacing*{\chapter}{0pt}{*3}{*2}
 
 \titleformat{\section}[hang]{\bfseries\itshape\large}{\thesection}{1em}{}{}
