--- a/thesis/frontmatter/list_of_symbols.tex
+++ b/thesis/frontmatter/list_of_symbols.tex
@@ -2,7 +2,7 @@
 \addcontentsline{toc}{chapter}{Wykaz ważniejszych oznaczeń i skrótów}
 
 \begin{tabular}{@{} l l p{0.7\textwidth} @{}}
-    $e$ & -- & Niepewność pomiaru.                          \\
-    $f$ & -- & Częstotliwość [Hz].                          \\
-    $k$ & -- & Stała Boltzmanna $1.38 \cdot 10^{-23}$ Ws/K. \\
+    $WCRDS$ & -- & Weakly Connected Roman Domination Set - zbiór dominujący rzymski słabospójny.\\
+    $WCRDF$ & -- & Weakly Connected Roman Domination Function - funkcja dominowania rzymskiego słabospójnego. \\
+    $WCRDN$ & -- & Weakly Connected Roman Domination Number - liczba dominowania rzymskiego słabospójnego.\\
 \end{tabular}
