--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -30,3 +30,62 @@
   url    = {https://www.worldscientific.com/doi/epdf/10.1142/S1793830921501251},
   note      = {Dostęp: 15.03.2025}
 }
+
+@online{NEW_STRATEGY,
+  author = {{Michael A. Henning, Stephen T. Hedetniemi}},
+  title  = {Defending the Roman Empire—A new strategy},
+  year   = {2003},
+  url    = {https://www.sciencedirect.com/science/article/pii/S0012365X02008117},
+  note   = {Dostęp: 11.05.2025}
+}
+
+@online{X3C,
+  title  = {Exact cover by 3-sets},
+  url    = {https://en.wikipedia.org/wiki/Exact_cover},
+  note   = {Dostęp: 11.05.2025}
+}
+
+@online{RDF,
+  author = {{Ernie J Cockayne, Paul A Dreyer Jr., Sandra M Hedetniemi, Stephen T Hedetniemi}},
+  title  = {Roman domination in graphs},
+  year   = {2004},
+  url    = {https://www.sciencedirect.com/science/article/pii/S0012365X03004473},
+  note   = {Dostęp: 11.05.2025}
+}
+
+@online{PROGRESS,
+  author = {{Joanna Raczek, Rita Zuazua}},
+  title  = {Progress on Roman and Weakly Connected Roman Graphs},
+  year   = {2021},
+  url    = {https://www.mdpi.com/2227-7390/9/16/1846},
+  note   = {Dostęp: 11.05.2025}
+}
+
+@online{GRASP,
+  author = {{Dangdang Niu, Xiaolin Nie, Lilin Zhang, Hongming Zhang, Minghao Yin}},
+  title  = {A greedy randomized adaptive search procedure (GRASP) for minimum weakly connected dominating set problem},
+  year   = {2023},
+  url    = {https://www.sciencedirect.com/science/article/abs/pii/S0957417422023569},
+  note   = {Dostęp: 11.05.2025}
+}
+
+@online{POLAND,
+  title  = {Plan istniejącej sieci przesyłowej najwyższych napięć},
+  year   = {2024},
+  url    = {https://www.pse.pl/obszary-dzialalnosci/krajowy-system-elektroenergetyczny/plan-sieci-elektroenergetycznej-najwyzszych-napiec/istniejaca},
+  note   = {Dostęp: 11.05.2025}
+}
+
+@online{KARATE,
+  title  = {karate_club_graph},
+  year   = {2024},
+  url    = {https://networkx.org/documentation/stable/reference/generated/networkx.generators.social.karate_club_graph.html},
+  note   = {Dostęp: 11.05.2025}
+}
+
+@online{FACEBOOK,
+  title  = {Social circles: Facebook},
+  year   = {2024},
+  url    = {https://snap.stanford.edu/data/ego-Facebook.html},
+  note   = {Dostęp: 11.05.2025}
+}
