--- a/thesis/frontmatter/list_of_symbols.tex
+++ b/thesis/frontmatter/list_of_symbols.tex
@@ -2,7 +2,8 @@
 \addcontentsline{toc}{chapter}{Wykaz ważniejszych oznaczeń i skrótów}
 
 \begin{tabular}{@{} l l p{0.7\textwidth} @{}}
-    $WCRDS$ & -- & Weakly Connected Roman Domination Set - zbiór dominujący rzymski słabospójny.\\
-    $WCRDF$ & -- & Weakly Connected Roman Domination Function - funkcja dominowania rzymskiego słabospójnego. \\
-    $WCRDN$ & -- & Weakly Connected Roman Domination Number - liczba dominowania rzymskiego słabospójnego.\\
+    $WCRDP$ & -- & Weakly Connected Roman Domination Problem - problem dominowania rzymskiego słabo spójnego.\\
+    $WCRDS$ & -- & Weakly Connected Roman Domination Set - zbiór dominujący rzymski słabo spójny.\\
+    $WCRDF$ & -- & Weakly Connected Roman Domination Function - funkcja dominowania rzymskiego słabo spójnego. \\
+    $\gamma_{R}^{\text{wc}}(G)$ & -- & Weakly Connected Roman Domination Number - liczba dominowania rzymskiego słabo spójnego. \\
 \end{tabular}
