--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -77,7 +77,7 @@
 }
 
 @online{KARATE,
-  title  = {karate_club_graph},
+  title  = {Karate club graph},
   year   = {2024},
   url    = {https://networkx.org/documentation/stable/reference/generated/networkx.generators.social.karate_club_graph.html},
   note   = {Dostęp: 11.05.2025}
