--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -89,3 +89,10 @@
   url    = {https://snap.stanford.edu/data/ego-Facebook.html},
   note   = {Dostęp: 11.05.2025}
 }
+
+@online{BLACKOUT,
+  title  = {Awaria zasilania na Półwyspie Iberyjskim},
+  year   = {2025},
+  url    = {https://pl.wikipedia.org/wiki/Awaria_zasilania_na_P%C3%B3%C5%82wyspie_Iberyjskim},
+  note   = {Dostęp: 21.05.2025}
+}
