practice and conclusion

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -71,21 +71,19 @@
 
 @online{POLAND,
   title  = {Plan istniejącej sieci przesyłowej najwyższych napięć},
-  year   = {2024},
+  year   = {2025},
   url    = {https://www.pse.pl/obszary-dzialalnosci/krajowy-system-elektroenergetyczny/plan-sieci-elektroenergetycznej-najwyzszych-napiec/istniejaca},
   note   = {Dostęp: 11.05.2025}
 }
 
 @online{KARATE,
   title  = {Karate club graph},
-  year   = {2024},
   url    = {https://networkx.org/documentation/stable/reference/generated/networkx.generators.social.karate_club_graph.html},
   note   = {Dostęp: 11.05.2025}
 }
 
 @online{FACEBOOK,
   title  = {Social circles: Facebook},
-  year   = {2024},
   url    = {https://snap.stanford.edu/data/ego-Facebook.html},
   note   = {Dostęp: 11.05.2025}
 }
@@ -95,4 +93,10 @@
   year   = {2025},
   url    = {https://pl.wikipedia.org/wiki/Awaria_zasilania_na_P%C3%B3%C5%82wyspie_Iberyjskim},
   note   = {Dostęp: 21.05.2025}
+}
+
+@online{ZACHARY,
+  title  = {Zachary's karate club},
+  url    = {https://en.wikipedia.org/wiki/Zachary%27s_karate_club},
+  note   = {Dostęp: 22.05.2025}
 }
