--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -100,3 +100,10 @@
   url    = {https://en.wikipedia.org/wiki/Zachary%27s_karate_club},
   note   = {Dostęp: 22.05.2025}
 }
+
+@online{CDS,
+  title  = {Solving the Connected Dominating Set Problem and Power Dominating Set Problem by Integer Programming},
+  year   = {2012},
+  url    = {https://link.springer.com/chapter/10.1007/978-3-642-31770-5_33},
+  note   = {Dostęp: 22.05.2025}
+}
