--- a/thesis/frontmatter/abstract_en.tex
+++ b/thesis/frontmatter/abstract_en.tex
@@ -1,9 +1,12 @@
 \chapter*{Abstract}
-The abstract describes a scientific problem focusing on the development and implementation of a data analysis method in a multidimensional environment.
-The objective of this thesis is to propose an optimization algorithm that enables efficient processing of large datasets.
-The scope of the work includes an analysis of existing methods, the implementation of a new solution, and the evaluation of its effectiveness on selected test cases.
-The research methodology involved mathematical modeling, Python programming, and visualization of results.
-The results indicate significant acceleration in computations while maintaining high accuracy.
-The key conclusion is the feasibility of applying the proposed algorithm in real-world analytical applications.
+The paper describes the problem of weakly connected Roman dominance. It presents the definition of the problem, its historical genesis and computational complexity. The aim of the paper is to analyze existing and original algorithms for finding weakly connected Roman dominance functions, their analysis and comparison in the context of possible practical application.
 
-\textbf{Keywords:} algorithms, data processing, optimization.
+The scope of the paper includes a systematic review of the literature, analysis of existing algorithms, implementation of original solutions and evaluation of their effectiveness on selected test cases. The tested algorithms determine both the minimal value of the weakly connected Roman dominance function and the weakly connected Roman dominance functions, not necessarily minimal. However, all of them determine the correct, in terms of the definition, weakly connected Roman dominance function.
+
+The applied research methods included linear programming, time measurements and visualization of results.
+
+The results indicate that depending on the characterization and features of the graph, it is possible to select an appropriate algorithm that solves the problem in a reasonable time and with good quality solutions.
+
+An important conclusion is the presentation of the theoretical potential of practical application of algorithms for finding weakly connected Roman dominance functions.\\
+
+\textbf{Keywords:} algorithms, optimization, weakly connected Roman domination function, weakly connected Roman domination number.
