--- a/thesis/frontmatter/abstract_pl.tex
+++ b/thesis/frontmatter/abstract_pl.tex
@@ -1,9 +1,12 @@
 \chapter*{Streszczenie}
-Streszczenie pracy opisuje problem naukowy polegający na opracowaniu i wdrożeniu metody analizy danych w środowisku wielowymiarowym.
-Celem pracy jest zaproponowanie algorytmu optymalizacyjnego, który pozwala na efektywne przetwarzanie dużych zbiorów danych.
-Zakres pracy obejmuje analizę istniejących metod, implementację nowego rozwiązania oraz ocenę jego skuteczności na wybranych przypadkach testowych.
-Zastosowana metoda badawcza obejmowała modelowanie matematyczne, programowanie w języku Python oraz wizualizację wyników.
-Wyniki wskazują na istotne przyspieszenie obliczeń przy zachowaniu wysokiej dokładności.
-Najważniejszym wnioskiem jest możliwość zastosowania zaproponowanego algorytmu w rzeczywistych aplikacjach analitycznych.
+Praca opisuje problem dominowania rzymskiego słabo spójnego. Przedstawia definicję problemu, jego genezę historyczną oraz złożoność obliczeniową. Celem pracy jest analiza istniejących i autorskich algorytmów znajdujących funkcje dominujące rzymskie słabo spójne, ich analiza oraz porównanie w kontekście możliwego praktycznego zastosowania.
 
-\textbf{Słowa kluczowe:} algorytmy, przetwarzanie danych, optymalizacja.
+Zakres pracy obejmuje systematyczny przegląd literatury, analizę istniejących algorytmów, implementację autorskich rozwiązań oraz ocenę ich skuteczności na wybranych przypadkach testowych. Badane algorytmy wyznaczają zarówno minimalną wartość funkcji dominowania rzyskiego słabo spójnego, jak i też funkcje dominujące rzymskie słabospójne, niekoniecznie minimalne. Wszystkie jednak wyznaczają prawidłowe, względem definicji funkcję dominujące rzymskie słabo spójne.
+
+Zastosowane metody badawcze obejmowały programowanie liniowe, pomiary czasów oraz wizualizację wyników.
+
+Wyniki wskazują na to, że w zależności od charakteryzacji i cech grafu istnieje możliwość dobrania odpowiedniego algorytmu, rozwiązującego problem w rozsądnym czasie i o dobrej jakości rozwiązania.
+
+Ważnym wnioskiem jest przedstawienie teoretycznego potencjału praktycznego zastosowania algorytmów znajdujących funkcje dominujące rzymskie słabo spójne.\\
+
+\textbf{Słowa kluczowe:} algorytmy, optymalizacja, funkcja dominowania rzymskiego słabo spójnego, liczba dominowania rzyskiego słabo spójnego.
