--- a/thesis/frontmatter/abstract_en.tex
+++ b/thesis/frontmatter/abstract_en.tex
@@ -1,12 +1,12 @@
 \chapter*{Abstract}
-The paper describes the problem of weakly connected Roman dominance. It presents the definition of the problem, its historical genesis and computational complexity. The aim of the paper is to analyze existing and original algorithms for finding weakly connected Roman dominance functions, their analysis and comparison in the context of possible practical application.
+The paper describes the problem of weakly connected Roman domination. It presents the definition of the problem, its historical genesis and computational complexity. The aim of the paper is to analyze existing and original algorithms for finding weakly connected Roman domination functions, their analysis and comparison in the context of possible practical application.
 
-The scope of the paper includes a systematic review of the literature, analysis of existing algorithms, implementation of original solutions and evaluation of their effectiveness on selected test cases. The tested algorithms determine both the minimal value of the weakly connected Roman dominance function and the weakly connected Roman dominance functions, not necessarily minimal. However, all of them determine the correct, in terms of the definition, weakly connected Roman dominance function.
+The scope of the paper includes a systematic review of the literature, analysis of existing algorithms, implementation of original solutions and evaluation of their effectiveness on selected test cases. The tested algorithms determine both the minimal value of the weakly connected Roman domination function and the weakly connected Roman domination functions, not necessarily minimal. However, all of them determine the correct, in terms of the definition, weakly connected Roman domination function.
 
 The applied research methods included linear programming, time measurements and visualization of results.
 
 The results indicate that depending on the characterization and features of the graph, it is possible to select an appropriate algorithm that solves the problem in a reasonable time and with good quality solutions.
 
-An important conclusion is the presentation of the theoretical potential of practical application of algorithms for finding weakly connected Roman dominance functions.\\
+An important conclusion is the presentation of the theoretical potential of practical application of algorithms for finding weakly connected Roman domination functions.\\
 
 \textbf{Keywords:} algorithms, optimization, weakly connected Roman domination function, weakly connected Roman domination number.
