--- a/thesis/frontmatter/abstract_pl.tex
+++ b/thesis/frontmatter/abstract_pl.tex
@@ -9,4 +9,4 @@ Wyniki wskazują na to, że w zależności od charakteryzacji i cech grafu istni
 
 Ważnym wnioskiem jest przedstawienie teoretycznego potencjału praktycznego zastosowania algorytmów znajdujących funkcje dominujące rzymskie słabo spójne.\\
 
-\textbf{Słowa kluczowe:} algorytmy, optymalizacja, funkcja dominowania rzymskiego słabo spójnego, liczba dominowania rzyskiego słabo spójnego.
+\textbf{Słowa kluczowe:} algorytmy, optymalizacja, funkcja dominowania rzymskiego słabo spójnego, liczba dominowania rzymskiego słabo spójnego.
