fixes after promoters review

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,5 +1,5 @@
 @online{theoryWCRDF,
-  author = {{dr inż. Joanna Raczek, dr Joanna Cyman}},
+  author = {{Joanna Raczek, Joanna Cyman}},
   title  = {Weakly connected Roman domination in graphs},
   url    = {https://mostwiedzy.pl/en/publication/weakly-connected-roman-domination-in-graphs,150016-1},
   note   = {Dostęp: 03.03.2025}
