--- a/thesis/frontmatter/abstract_pl.tex
+++ b/thesis/frontmatter/abstract_pl.tex
@@ -1,11 +1,11 @@
 \chapter*{Streszczenie}
 Praca opisuje problem dominowania rzymskiego słabo spójnego. Przedstawia definicję problemu, jego genezę historyczną oraz złożoność obliczeniową. Celem pracy jest analiza istniejących i autorskich algorytmów znajdujących funkcje dominujące rzymskie słabo spójne, ich analiza oraz porównanie w kontekście możliwego praktycznego zastosowania.
 
-Zakres pracy obejmuje systematyczny przegląd literatury, analizę istniejących algorytmów, implementację autorskich rozwiązań oraz ocenę ich skuteczności na wybranych przypadkach testowych. Badane algorytmy wyznaczają zarówno minimalną wartość funkcji dominowania rzymskiego słabo spójnego, jak i też funkcje dominujące rzymskie słabo spójne, niekoniecznie minimalne. Wszystkie jednak wyznaczają prawidłowe, względem definicji funkcje dominujące rzymskie słabo spójne.
+Zakres pracy obejmuje systematyczny przegląd literatury, analizę istniejących algorytmów, implementację autorskich rozwiązań oraz ocenę ich skuteczności na wybranych przypadkach testowych. Badane algorytmy wyznaczają zarówno najmniejszą wartość funkcji dominowania rzymskiego słabo spójnego, jak i też funkcje dominujące rzymskie słabo spójne, niekoniecznie minimalne. Wszystkie jednak wyznaczają prawidłowe, względem definicji funkcje dominujące rzymskie słabo spójne.
 
-Zastosowane metody badawcze obejmowały programowanie liniowe, pomiary czasów oraz wizualizację wyników.
+Zastosowane metody badawcze obejmowały programowanie liniowe, algorytmy zachłanne, liniowe, aproksymacyjne, mrówkowe, pomiary czasów oraz wizualizację wyników.
 
-Wyniki wskazują na to, że w zależności od charakteryzacji i cech grafu istnieje możliwość dobrania odpowiedniego algorytmu, rozwiązującego problem w rozsądnym czasie i o dobrej jakości rozwiązania.
+Wyniki wskazują na to, że w zależności od charakterystyki i cech grafu istnieje możliwość dobrania odpowiedniego algorytmu rozwiązującego problem w rozsądnym czasie i o dobrej jakości rozwiązania.
 
 Ważnym wnioskiem jest przedstawienie teoretycznego potencjału praktycznego zastosowania algorytmów znajdujących funkcje dominujące rzymskie słabo spójne.\\
 
