--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,13 +1,14 @@
-@online{theoryWCRDF,
-  author = {{Joanna Raczek, Joanna Cyman}},
+@article{theoryWCRDF,
+  author = {{J. Raczek} and {J. Cyman}},
+  year      = {2019},
   title  = {Weakly connected Roman domination in graphs},
   url    = {https://mostwiedzy.pl/en/publication/weakly-connected-roman-domination-in-graphs,150016-1},
   note   = {Dostęp: 03.03.2025}
 }
 
-@inproceedings{defendRomanEmpire,
-  author    = {I. Stewart,},
-  title     = {Defend the Roman Empire!,},
+@book{defendRomanEmpire,
+  author    = {I. Stewart},
+  title     = {Defend the Roman Empire!},
   year      = {1999},
   address   = {USA},
   pages     = {136--139},
@@ -15,24 +16,24 @@
   note      = {Dostęp: 03.03.2025}
 }
 
-@online{improvedILP,
-  author = {{Marija Ivanović}},
+@article{improvedILP,
+  author = {M. Ivanović},
   title  = {Improved integer linear programming formulation for weak Roman domination problem},
   year   = {2017},
   url    = {https://link.springer.com/article/10.1007/s00500-017-2706-4},
-  note      = {Dostęp: 15.03.2025}
+  note   = {Dostęp: 15.03.2025}
 }
 
-@online{ILP,
-  author = {{Padamutham Chakradhar, Palagiri Venkata Subba Reddy, i Khandelwal Himanshu}},
+@article{ILP,
+  author = {P. Chakradhar and P. Reddy and K. Himanshu},
   title  = {Algorithmic complexity of weakly connected Roman domination in graphs},
   year   = {2021},
   url    = {https://www.worldscientific.com/doi/epdf/10.1142/S1793830921501251},
-  note      = {Dostęp: 15.03.2025}
+  note   = {Dostęp: 15.03.2025}
 }
 
-@online{NEW_STRATEGY,
-  author = {{Michael A. Henning, Stephen T. Hedetniemi}},
+@article{NEW_STRATEGY,
+  author = {M. A. Henning and S. T. Hedetniemi},
   title  = {Defending the Roman Empire—A new strategy},
   year   = {2003},
   url    = {https://www.sciencedirect.com/science/article/pii/S0012365X02008117},
@@ -45,24 +46,24 @@
   note   = {Dostęp: 11.05.2025}
 }
 
-@online{RDF,
-  author = {{Ernie J Cockayne, Paul A Dreyer Jr., Sandra M Hedetniemi, Stephen T Hedetniemi}},
+@article{RDF,
+  author = {E. J. Cockayne and P. A. Dreyer Jr. and S. M. Hedetniemi and S. T. Hedetniemi},
   title  = {Roman domination in graphs},
   year   = {2004},
   url    = {https://www.sciencedirect.com/science/article/pii/S0012365X03004473},
   note   = {Dostęp: 11.05.2025}
 }
 
-@online{PROGRESS,
-  author = {{Joanna Raczek, Rita Zuazua}},
+@article{PROGRESS,
+  author = {J. Raczek and R. Zuazua},
   title  = {Progress on Roman and Weakly Connected Roman Graphs},
   year   = {2021},
   url    = {https://www.mdpi.com/2227-7390/9/16/1846},
   note   = {Dostęp: 11.05.2025}
 }
 
-@online{GRASP,
-  author = {{Dangdang Niu, Xiaolin Nie, Lilin Zhang, Hongming Zhang, Minghao Yin}},
+@article{GRASP,
+  author = {D. Niu and X. Nie and L. Zhang and H. Zhang and M. Yin},
   title  = {A greedy randomized adaptive search procedure (GRASP) for minimum weakly connected dominating set problem},
   year   = {2023},
   url    = {https://www.sciencedirect.com/science/article/abs/pii/S0957417422023569},
@@ -71,7 +72,6 @@
 
 @online{POLAND,
   title  = {Plan istniejącej sieci przesyłowej najwyższych napięć},
-  year   = {2025},
   url    = {https://www.pse.pl/obszary-dzialalnosci/krajowy-system-elektroenergetyczny/plan-sieci-elektroenergetycznej-najwyzszych-napiec/istniejaca},
   note   = {Dostęp: 11.05.2025}
 }
@@ -90,7 +90,6 @@
 
 @online{BLACKOUT,
   title  = {Awaria zasilania na Półwyspie Iberyjskim},
-  year   = {2025},
   url    = {https://pl.wikipedia.org/wiki/Awaria_zasilania_na_P%C3%B3%C5%82wyspie_Iberyjskim},
   note   = {Dostęp: 21.05.2025}
 }
@@ -101,7 +100,8 @@
   note   = {Dostęp: 22.05.2025}
 }
 
-@online{CDS,
+@article{CDS,
+  author = {N. Fan and J. Watson},
   title  = {Solving the Connected Dominating Set Problem and Power Dominating Set Problem by Integer Programming},
   year   = {2012},
   url    = {https://link.springer.com/chapter/10.1007/978-3-642-31770-5_33},
