--- a/thesis/frontmatter/list_of_symbols.tex
+++ b/thesis/frontmatter/list_of_symbols.tex
@@ -7,5 +7,5 @@
     $\gamma_{R}^{\text{wc}}(G)$ & -- & Weakly Connected Roman Domination Number - liczba dominowania rzymskiego słabo spójnego. \\
     $n = |V|$ & -- & liczba wierzchołków pewnego grafu $G$.\\
     $m = |E|$ & -- & liczba wierzchołków pewnego grafu $G$.\\
-    $CDS$ & -- & Connected dominating set - zbiór dominujący spójny.\\
+    $CDS$ & -- & Connected Dominating Set - zbiór dominujący spójny.\\
 \end{tabular}
