--- a/thesis/preamble.tex
+++ b/thesis/preamble.tex
@@ -73,7 +73,7 @@
 \titlespacing*{\subsection}{0pt}{*1.5}{*1}
 
 % Bibliography configuration (Biber backend with ISO-numeric style)
-\usepackage[backend=biber,style=iso-numeric]{biblatex}
+\usepackage[backend=biber,style=numeric]{biblatex}
 \addbibresource{bibliography.bib}
 
 % Polish-specific strings for bibliography
