--- a/thesis/frontmatter/abstract_pl.tex
+++ b/thesis/frontmatter/abstract_pl.tex
@@ -1,7 +1,7 @@
 \chapter*{Streszczenie}
 Praca opisuje problem dominowania rzymskiego słabo spójnego. Przedstawia definicję problemu, jego genezę historyczną oraz złożoność obliczeniową. Celem pracy jest analiza istniejących i autorskich algorytmów znajdujących funkcje dominujące rzymskie słabo spójne, ich analiza oraz porównanie w kontekście możliwego praktycznego zastosowania.
 
-Zakres pracy obejmuje systematyczny przegląd literatury, analizę istniejących algorytmów, implementację autorskich rozwiązań oraz ocenę ich skuteczności na wybranych przypadkach testowych. Badane algorytmy wyznaczają zarówno najmniejszą wartość funkcji dominowania rzymskiego słabo spójnego, jak i też funkcje dominujące rzymskie słabo spójne, niekoniecznie najmniejsze. Wszystkie jednak wyznaczają prawidłowe, względem definicji funkcje dominujące rzymskie słabo spójne.
+Zakres pracy obejmuje systematyczny przegląd literatury, analizę istniejących algorytmów, implementację autorskich rozwiązań oraz ocenę ich skuteczności na wybranych przypadkach testowych. Badane algorytmy wyznaczają prawidłowe, względem definicji, funkcje dominujące rzymskie słabo spójne oraz ich wagi. Niektóre z algorytmów wyznaczają najmniejszą wagę funkcji dominującej rzymskiej słabo spójnej, będącą liczbą dominowania rzymskiego słabo spójnego.
 
 Zastosowane metody badawcze obejmowały programowanie liniowe, algorytmy zachłanne, liniowe, aproksymacyjne, mrówkowe, pomiary czasów oraz wizualizację wyników.
 
