--- a/thesis/frontmatter/list_of_symbols.tex
+++ b/thesis/frontmatter/list_of_symbols.tex
@@ -5,10 +5,10 @@
     $WCRDP$ & -- & Weakly Connected Roman Domination Problem - problem dominowania rzymskiego słabo spójnego.\\
     $WCRDF$ & -- & Weakly Connected Roman Domination Function - funkcja dominowania rzymskiego słabo spójnego. \\
     $\gamma_{R}^{\text{wc}}(G)$ & -- & Weakly Connected Roman Domination Number - liczba dominowania rzymskiego słabo spójnego. \\
-    $V$ & -- & zbiór wierzchołków pewnego grafu $G$.\\
-    $E$ & -- & zbiór krawędzi pewnego grafu $G$.\\
-    $n = |V|$ & -- & liczba wierzchołków pewnego grafu $G$.\\
-    $m = |E|$ & -- & liczba wierzchołków pewnego grafu $G$.\\
-    $\Delta$ & -- & maksymalny stopień wierzchołka pewnego grafu $G$.\\
+    $V$ & -- & zbiór wierzchołków grafu $G$.\\
+    $E$ & -- & zbiór krawędzi grafu $G$.\\
+    $n = |V|$ & -- & liczba wierzchołków grafu $G$.\\
+    $m = |E|$ & -- & liczba wierzchołków grafu $G$.\\
+    $\Delta$ & -- & maksymalny stopień wierzchołka grafu $G$.\\
     $CDS$ & -- & Connected Dominating Set - zbiór dominujący spójny.\\
 \end{tabular}
