--- a/thesis/frontmatter/abstract_en.tex
+++ b/thesis/frontmatter/abstract_en.tex
@@ -1,7 +1,7 @@
 \chapter*{Abstract}
 The paper describes the problem of weakly connected Roman domination. It presents the definition of the problem, its historical genesis and computational complexity. The aim of the paper is to analyze existing and original algorithms for finding weakly connected Roman domination functions, their analysis and comparison in the context of possible practical application.
 
-The scope of the paper includes a systematic review of the literature, analysis of existing algorithms, implementation of original solutions and evaluation of their effectiveness on selected test cases. The tested algorithms determine both the minimum value of the weakly connected Roman domination function and the weakly connected Roman domination functions, not necessarily minimum. However, all of them determine the correct, in terms of the definition, weakly connected Roman domination function.
+The scope of the paper includes a systematic review of the literature, analysis of existing algorithms, implementation of original solutions and evaluation of their effectiveness on selected test cases. The tested algorithms determine the correct, with respect to the definition, weakly connected Roman domination functions and their weights. Some of the algorithms determine the minimum weight of the weakly connected Roman domination function, which is the weakly connected Roman domination number.
 
 The research methods used include linear programming, greedy, linear, approximation, and ant colony algorithms, time measurements, and the result visualization.
 
